--- a/kiad_page.html
+++ b/kiad_page.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>사단법인 한국광고연구소 | AI 기반 조사·연구·마케팅·광고·홍보 전문연구소</title>
-  <meta name="description" content="사단법인 한국광고연구소는 AI 기반 조사/연구, 마케팅·광고·홍보 전략, 성과 측정 및 최적화를 제공합니다." />
+  <meta name="description" content="사단법인 한국광고연구소는 AI 기반으로 중소기업 및 소상공인들을 위한 조사/연구, 마케팅·광고·홍보 전략, 성과 측정 및 최적화를 제공합니다." />
   <meta name="theme-color" content="#020617" />
 
   <!-- Tailwind (CDN) -->
