--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </svg>
           </div>
           <div class="leading-tight">
-            <div class="text-sm font-semibold text-white">사단법인 한국광고연구소</div>
+            <div class="text-sm font-semibold text-white">사단법인 한국광고연구소(KIAD)</div>
             <div class="text-xs text-white/60">AI 기반 조사·연구·마케팅·광고·홍보 전문연구소</div>
           </div>
         </a>
